--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,8 +8,11 @@
             .container{
                 max-width: 800px;
                 margin: 0 auto;
-                color: grey;
+                color: #6b3e3e;
                 font-family: sans-serif;
+                padding-top: 50px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
         </style>
     </head>
