--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,21 +3,34 @@
         <title>
             Article One | Prashant Chaurasia
         </title>
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: #6b3e3e;
+                font-family: sans-serif;
+                padding-top: 50px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Sep 28, 2016
-        </div>
-        <div>
-            <p>
-                This is the content for my third article.
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                Sep 28, 2016
+            </div>
+            <div>
+                <p>
+                    This is the content for my third article.
+            </div>
         </div>
     </body>
 </html>
