--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -22,7 +22,7 @@
             </div>
             <hr/>
             <h3>
-                Article One
+                Article Three
             </h3>
             <div>
                 Sep 28, 2016
