[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -22,7 +22,7 @@
             </div>
             <hr/>
             <h3>
-                Article One
+                Article Two
             </h3>
             <div>
                 Sep 29, 2016
