[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article One | Prashant Chaurasia
+            Article Two | Prashant Chaurasia
         </title>
         <style>
             .container{
