--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article One | Prashant Chaurasia
+            Article Three | Prashant Chaurasia
         </title>
         <style>
             .container{
