--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Article One | Prashant Chaurasia
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: #6b3e3e;
-                font-family: sans-serif;
-                padding-top: 50px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
