--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,10 @@
             <h4> A new heading </h4>
             I've made some new local changes.
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+        <script>
+            alert("Hi I am a Javascript");
+        </script>
+        <script type="text/javascript" src="/ui/main.js"> 
         </script>
     </body>
 </html>
