--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold" id="main_content">
+        <div id='main_content' class="center text-big bold" >
             Hi! I am Prashant and this is my first webapp.
             <h4> A new heading </h4>
             I've made some new local changes.
